# amazon_review_tracker

./: email_csv.py  for_sellers.py  import_database.py  main.py  main_duplicate.py  main_with_db.py  negative_review_data.csv  output.xlsx  positive_review_data.csv  pyproject.toml  review_data.csv  reviews_tracker_sheet.xlsx  scaffold.py  sent_emails.py  test.py
