[tool.poetry]
name = "repl_python3_Python-Selenium-Tutorial"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^4.0.0"
openpyxl = "^3.0.9"
replit = "^3.2.4"
pandas = "^1.4.1"
tabulate = "^0.8.9"
easymail = "^0.3.0"
Flask = "^2.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
